--- a/index.html
+++ b/index.html
@@ -1,14 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <canvas id="canvas" width="800" height="600"></canvas>
+<html>
 
-    <script src="src/main.js"></script>
+<head>
+    <title>SystemJS</title>
+
+    <style>
+
+        body {
+            background: #eeeeee;
+        }
+        /*
+        css选择器：# 表示id选择器
+        */
+        #canvas {
+            background: #ffffff ; /* 背景白色 */
+
+            -webkit-box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
+            -moz-box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
+            box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
+        }
+    </style>
+
+    <script src="node_modules/systemjs/dist/system.js"></script>
+    <script src="node_modules/typescript/lib/typescript.js"></script>
+    <script>
+        System.config({
+            transpiler: 'typescript',
+            packages: {
+                './': {
+                    defaultExtension: 'ts'
+                }
+            }
+        });
+        System
+            .import('IShape_Event_Hittest_Draw_Test_Demo.ts')
+            .then(null, console.error.bind(console));
+    </script>
+</head>
+
+<body id="body">
+    <canvas id="canvas" width="800" height="600"></canvas>
 </body>
+
 </html>
